Starting PSAPs management

--- a/angular/projects/admin/src/app/psaps/edit-psap.component.html
+++ b/angular/projects/admin/src/app/psaps/edit-psap.component.html
@@ -1,26 +1,28 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-  <h1 class="h2" i18n>Edit State</h1>
+  <h1 class="h2" i18n>Edit PSAP</h1>
 </div>
-<ngb-alert *ngIf="isConfiguring" type="info" [dismissible]="false">
-  <div><shared-loader></shared-loader> {{status || 'Please wait...'}}</div>
-</ngb-alert>
-<ngb-alert *ngIf="isError" type="danger" [dismissible]="false">
-  <div>{{status}}</div>
-</ngb-alert>
-<div class="row">
-  <shared-form #form *ngIf="id" type="states" [hideButtons]="true" [id]="id" class="col-md-3">
-    <ng-template let-record="record" let-error="error">
-      <fieldset [disabled]="isConfiguring">
-        <div class="mb-3">
-          <shared-text-field id="name" label="Name" [source]="record" [error]="error"></shared-text-field>
-        </div>
-        <div class="mb-3">
-          <shared-checkbox id="isConfigured" label="Is configured?" [source]="record"></shared-checkbox>
-        </div>
-        <div class="mb-3">
-          <button (click)="onConfigure()" type="button" class="btn btn--primary" i18n>Configure</button>
-        </div>
-      </fieldset>
-    </ng-template>
-  </shared-form>
-</div>
+<shared-form *ngIf="id" type="psaps" [id]="id" class="d-block col-xl-6">
+  <ng-template let-record="record" let-error="error">
+    <div class="mb-3">
+      <shared-text-field id="name" label="Name" [source]="record" [error]="error"></shared-text-field>
+    </div>
+    <div class="mb-3">
+      <shared-text-field id="stateId" label="State ID" [source]="record" [error]="error"></shared-text-field>
+    </div>
+    <div class="mb-3">
+      <shared-text-field id="countyId" label="County ID" [source]="record" [error]="error"></shared-text-field>
+    </div>
+    <div class="mb-3">
+      <shared-text-field id="cityId" label="City ID" [source]="record" [error]="error"></shared-text-field>
+    </div>
+    <div class="mb-3">
+      <shared-text-field id="change" label="Change Code" [source]="record" [error]="error"></shared-text-field>
+    </div>
+    <div class="mb-3">
+      <shared-text-field id="comments" label="Comments" [rows]="2" [source]="record" [error]="error"></shared-text-field>
+    </div>
+    <div class="mb-3">
+      <shared-text-field id="modifiedOn" label="Modified On" [source]="record" [error]="error"></shared-text-field>
+    </div>
+  </ng-template>
+</shared-form>
