--- a/angular/projects/admin/src/app/psaps/list-psaps.component.html
+++ b/angular/projects/admin/src/app/psaps/list-psaps.component.html
@@ -1,31 +1,24 @@
 <router-outlet></router-outlet>
 <div [class.d-none]="route.firstChild">
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-    <h1 class="h2">States</h1>
+    <h1 class="h2">PSAPs</h1>
+    <shared-search-field placeholder="Search" [debounceTime]="300" (debouncedValueChange)="search = $event"></shared-search-field>
   </div>
   <div class="table-responsive">
     <table class="table">
       <thead>
-        <tr class="state">
+        <tr>
           <th class="col-1">Id</th>
           <th>Name</th>
-          <th class="state__configured">Configured?</th>
-          <th>Bordering States</th>
+          <th>Comments</th>
         </tr>
       </thead>
-      <shared-list type="states">
+      <shared-list type="psaps" [search]="search">
         <ng-template let-records="records" let-record="record">
-          <tr class="state" [routerLink]="['/states', record.id]">
+          <tr class="state" [routerLink]="['/psaps', record.id]">
             <td>{{record.id}}</td>
             <td>{{record.name}}</td>
-            <td class="state__configured">
-              <shared-checkbox [id]="record.id" name="isConfigured" [source]="record"></shared-checkbox>
-            </td>
-            <td>
-              <ng-container *ngFor="let borderState of borderingStates(records, record); let first=first">
-                <span *ngIf="!first">,&nbsp;</span>{{borderState.name}}
-              </ng-container>
-            </td>
+            <td class="text-muted">{{record.comments}}</td>
           </tr>
         </ng-template>
       </shared-list>
