--- a/angular/projects/admin/src/app/users/list-users.component.html
+++ b/angular/projects/admin/src/app/users/list-users.component.html
@@ -1,7 +1,10 @@
 <router-outlet></router-outlet>
 <div [class.d-none]="route.firstChild">
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-    <h1 class="h2">Users</h1>
+    <span class="d-flex">
+      <h1 class="h2">Users</h1>
+      <a routerLink="/users/new" class="btn btn--sm btn--secondary ms-3">New User</a>
+    </span>
     <shared-search-field placeholder="Search" [debounceTime]="300" (debouncedValueChange)="onSearch($event)"></shared-search-field>
   </div>
   <div class="table-responsive">
