--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -182,10 +182,6 @@ select:disabled {
   margin-top: 0.375rem;
 }
 
-// shared-checkbox {
-//   @extend .form-check;
-// }
-
 .form-check-input {
   background-size: auto;
   margin-top: 0;
@@ -193,4 +189,55 @@ select:disabled {
 
 .form-check-label {
   padding-top: 0.375rem;
+}
+
+.form-field-group {
+  display: flex;
+
+  & > .form-field,
+  shared-text-field,
+  shared-select-field,
+  shared-file-field {
+    flex-grow: 1;
+  }
+  & > .form-field,
+  & > .btn {
+    &:not(:first-child) {
+      align-self: stretch;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+  }
+  shared-text-field,
+  shared-select-field,
+  shared-file-field {
+    &:not(:first-child) {
+      .form-field {
+        align-self: stretch;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+    }
+  }
+  & > .form-field,
+  & > .btn {
+    &:not(:last-child) {
+      align-self: stretch;
+      border-right: none;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+  }
+  shared-text-field,
+  shared-select-field,
+  shared-file-field {
+    &:not(:last-child) {
+      .form-field {
+        align-self: stretch;
+        border-right: none;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+    }
+  }
 }
