Fix tests, style navs

--- a/angular/projects/design/src/app/app.component.html
+++ b/angular/projects/design/src/app/app.component.html
@@ -20,41 +20,11 @@
         Inputs
       </a>
     </li>
-    <!-- <li>
-      <a href="#" class="nav-link">
-        Branding
+    <li>
+      <a routerLink="/navs" routerLinkActive="sidebar__item--active" class="sidebar__item">
+        Navs
       </a>
     </li>
-    <li>
-      <a href="#" class="nav-link">
-        Text
-      </a>
-    </li>
-    <li>
-      <a href="#" class="nav-link">
-        Object Styles
-      </a>
-    </li>
-    <li>
-      <a href="#" class="nav-link">
-        Colors
-      </a>
-    </li>
-    <li>
-      <a href="#" class="nav-link">
-        Icons
-      </a>
-    </li>
-    <li>
-      <a href="#" class="nav-link">
-        Map Components
-      </a>
-    </li>
-    <li>
-      <a href="#" class="nav-link">
-        Elements
-      </a>
-    </li> -->
   </ul>
 </nav>
 <main role="main">
