--- a/angular/projects/design/src/app/branding.component.html
+++ b/angular/projects/design/src/app/branding.component.html
@@ -1,6 +1,10 @@
 <h1>Branding</h1>
-<shared-logo></shared-logo>
-<shared-logo color="light"></shared-logo>
-<shared-logo color="white"></shared-logo>
-<shared-logo type="square"></shared-logo>
-<shared-logo type="square" color="light"></shared-logo>
+<div class="d-block col-xl-6">
+  <shared-logo></shared-logo>
+  <shared-logo color="light"></shared-logo>
+  <shared-logo color="white"></shared-logo>
+</div>
+<div class="d-block col-1">
+  <shared-logo type="square"></shared-logo>
+  <shared-logo type="square" color="light"></shared-logo>  
+</div>
