--- a/angular/projects/design/src/styles/_buttons.scss
+++ b/angular/projects/design/src/styles/_buttons.scss
@@ -7,6 +7,7 @@
   color: $body-color;
   text-align: center;
   text-decoration: if($link-decoration == none, null, none);
+  text-transform: none;
   white-space: $btn-white-space;
   vertical-align: middle;
   cursor: if($enable-button-pointers, pointer, null);
