--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -22,7 +22,7 @@
 // @import "~bootstrap/scss/transitions";
 // @import "~bootstrap/scss/dropdown";
 // @import "~bootstrap/scss/button-group";
-@import '~bootstrap/scss/nav';
+// @import '~bootstrap/scss/nav';
 // @import "~bootstrap/scss/navbar";
 // @import "~bootstrap/scss/card";
 // @import "~bootstrap/scss/accordion";
@@ -55,6 +55,7 @@
 @import 'styles/icons';
 @import 'styles/forms';
 @import 'styles/links';
+@import 'styles/navs';
 @import 'styles/alert';
 @import 'styles/modal';
 @import 'styles/sidebar';
