--- a/angular/projects/admin/src/app/psaps/edit-psap.component.html
+++ b/angular/projects/admin/src/app/psaps/edit-psap.component.html
@@ -3,6 +3,14 @@
 </div>
 <shared-form *ngIf="id" type="psaps" [id]="id" class="d-block col-xl-6">
   <ng-template let-record="record" let-error="error">
+    <ul class="nav">
+      <li class="nav__item">
+        <a class="nav__link" [routerLink]="['/psaps', id, 'edit']" routerLinkActive="nav__link--active">Edit</a>
+      </li>
+      <li class="nav__item">
+        <a class="nav__link" [routerLink]="['/psaps', id, 'dispatchers']" routerLinkActive="nav__link--active">Dispatchers</a>
+      </li>
+    </ul>
     <div class="mb-3">
       <shared-text-field id="name" label="Name" [source]="record" [error]="error"></shared-text-field>
     </div>
