--- a/angular/projects/design/src/app/inputs.component.html
+++ b/angular/projects/design/src/app/inputs.component.html
@@ -67,6 +67,6 @@
 <section>
   <h2>Search</h2>
   <div class="mb-3">
-    <shared-search-field id="search" placeholder="Search" [ngbTypeahead]="search" [source]="source" [target]="source"></shared-search-field>
+    <shared-search-field id="search" placeholder="Search" [searchHandler]="search" [source]="source" [target]="source"></shared-search-field>
   </div>
 </section>
