--- a/angular/projects/onboarding/src/app/agency.component.html
+++ b/angular/projects/onboarding/src/app/agency.component.html
@@ -7,7 +7,7 @@
       <div class="col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
         <div class="mb-3">
           <ng-template #rt let-r="result" let-t="term">{{r.name}}</ng-template>
-          <shared-search-field #agencyEl [ngbTypeahead]="search" [resultTemplate]="rt" [inputFormatter]="formatter" id="agency" label="Agency" placeholder="Search for Agency" [source]="data" [target]="data"></shared-search-field>
+          <shared-search-field #agencyEl [searchHandler]="searchHandler" [resultTemplate]="rt" [inputFormatter]="formatter" id="agency" label="Agency" placeholder="Search for Agency" [source]="data" [target]="data"></shared-search-field>
         </div>
       </div>
     </div>
