--- a/angular/projects/admin/src/app/psaps/list-psap-dispatchers.component.html
+++ b/angular/projects/admin/src/app/psaps/list-psap-dispatchers.component.html
@@ -4,10 +4,10 @@
 <div class="d-block col-xl-6">
   <ul class="nav">
     <li class="nav__item">
-      <a class="nav__link" [routerLink]="['/psaps', id, 'edit']" routerLinkActive="nav__link--active">Edit</a>
+      <a class="nav__link" [routerLink]="['/psaps', psapId, 'edit']" routerLinkActive="nav__link--active">Edit</a>
     </li>
     <li class="nav__item">
-      <a class="nav__link" [routerLink]="['/psaps', id, 'dispatchers']" routerLinkActive="nav__link--active">Dispatchers</a>
+      <a class="nav__link" [routerLink]="['/psaps', psapId, 'dispatchers']" routerLinkActive="nav__link--active">Dispatchers</a>
     </li>
   </ul>
 </div>
@@ -15,13 +15,13 @@
   <table class="table">
     <thead>
       <tr>
-        <th>Name</th>
+        <th>User</th>
         <th>Call Sign</th>
       </tr>
     </thead>
-    <shared-list type="dispatchers" [params]="params" [basePath]="'/psaps/' + id + '/dispatchers'">
+    <shared-list type="dispatchers" [params]="params" [basePath]="'/psaps/' + psapId + '/dispatchers'">
       <ng-template let-records="records" let-record="record">
-        <tr class="state" [routerLink]="['/psaps', id, 'dispatchers', record.id]">
+        <tr class="state" [routerLink]="['/psaps', psapId, 'dispatchers', record.id]">
           <td>{{record.user.firstName}} {{record.user.lastName}} &lt;{{record.user.email}}&gt;</td>
           <td>{{record.callSign}}</td>
         </tr>
@@ -29,4 +29,4 @@
     </shared-list>
   </table>
 </div>
-<a [routerLink]="['/psaps', id, 'dispatchers', 'new']" class="btn btn--sm btn--secondary">New Dispatcher</a>
+<a [routerLink]="['/psaps', psapId, 'dispatchers', 'new']" class="btn btn--sm btn--secondary">New Dispatcher</a>
