Post-login vehicle/unit assignment

--- a/angular/projects/design/src/app/app.component.html
+++ b/angular/projects/design/src/app/app.component.html
@@ -11,6 +11,11 @@
       </a>
     </li>
     <li>
+      <a routerLink="/headers" routerLinkActive="sidebar__item--active" class="sidebar__item">
+        Headers
+      </a>
+    </li>
+    <li>
       <a routerLink="/icons" routerLinkActive="sidebar__item--active" class="sidebar__item">
         Icons
       </a>
