--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -51,11 +51,14 @@
 // Customized styles
 @import 'styles/root';
 @import 'styles/type';
+@import 'styles/grid';
 @import 'styles/buttons';
-@import 'styles/icons';
 @import 'styles/forms';
+@import 'styles/icons';
+@import 'styles/headers';
 @import 'styles/links';
 @import 'styles/navs';
+@import 'styles/pictures';
 @import 'styles/alert';
 @import 'styles/modal';
 @import 'styles/sidebar';
