--- a/angular/projects/shared/src/lib/components/headers/command-footer.component.html
+++ b/angular/projects/shared/src/lib/components/headers/command-footer.component.html
@@ -1,5 +1,5 @@
 <footer class="command-footer">
-  <div class="command-footer__container portrait-container">
+  <div class="command-footer__container">
     <div class="command-footer__content">
       <ng-content></ng-content>
     </div>
