--- a/angular/projects/design/src/app/headers.component.html
+++ b/angular/projects/design/src/app/headers.component.html
@@ -1,6 +1,6 @@
 <h1>Headers</h1>
 <section>
-  <shared-header [user]="user"></shared-header>
+  <shared-welcome-header [user]="user"></shared-welcome-header>
 </section>
 <shared-command-footer>
   <h4>Hello from the command footer.</h4>
