Command header component

--- a/angular/projects/app/src/app/incidents/list-incidents.component.html
+++ b/angular/projects/app/src/app/incidents/list-incidents.component.html
@@ -1,1 +1,3 @@
-<h1>Incidents</h1>
+<shared-command-header [user]="user.attributes$|async">
+  <shared-search-field placeholder="Search"></shared-search-field>
+</shared-command-header>
