Manual eager load of scenes for incidents

--- a/angular/projects/app/src/app/incidents/list-incidents.component.html
+++ b/angular/projects/app/src/app/incidents/list-incidents.component.html
@@ -8,6 +8,7 @@
         <ng-template let-record="record">
           <tr [routerLink]="['/incidents', record.id]">
             <td>#{{record.number}}</td>
+            <td>{{record.scene?.address1}}</td>
           </tr>
         </ng-template>
       </shared-list>
