Styling list incidents page

--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -1,12 +1,4 @@
-// Bootstrap variable overrides- must come before import of default variable values below
-@import 'styles/variables';
-@import 'styles/mixins';
-
-// Configuration
-@import '~bootstrap/scss/functions';
-@import '~bootstrap/scss/variables';
-@import '~bootstrap/scss/mixins';
-@import '~bootstrap/scss/utilities';
+@import 'styles/common';
 
 // Layout & components
 @import '~bootstrap/scss/root';
