--- a/angular/projects/app/src/app/incidents/list-incidents.component.html
+++ b/angular/projects/app/src/app/incidents/list-incidents.component.html
@@ -6,9 +6,23 @@
     <table class="table">
       <shared-list type="incidents">
         <ng-template let-record="record">
-          <tr [routerLink]="['/incidents', record.id]">
-            <td>#{{record.number}}</td>
-            <td>{{record.scene?.address1}}</td>
+          <tr *ngIf="parseDate(record.dispatches[0].dispatchedAt) as datetime" [routerLink]="['/incidents', record.id]">
+            <td>
+              <div class="incident">
+                <div class="incident__number">#{{record.number}}</div>
+                <div class="incident__address">
+                  {{record.scene?.address1|inflection:'titleize'}}<br />
+                  {{record.scene?.address2|inflection:'titleize'}}<br *ngIf="record.scene?.address2" />
+                  {{cityName(record.scene?.city?.featureName)}}<span *ngIf="record.scene?.city && record.scene?.state">, </span>{{record.scene?.state.abbr}} {{record.scene?.zip}}
+                </div>
+                <div class="incident__date">
+                  {{datePart(datetime)}}
+                </div>
+                <div class="incident__time">
+                  {{timePart(datetime)}}
+                </div>    
+              </div>
+            </td>
           </tr>
         </ng-template>
       </shared-list>
