--- a/angular/projects/app/src/app/incidents/list-incidents.component.scss
+++ b/angular/projects/app/src/app/incidents/list-incidents.component.scss
@@ -3,27 +3,24 @@
 .incident {
   display: flex;
   margin: 0 auto;
-  max-width: 1024px;
+  max-width: map-get($container-max-widths, 'lg');
 }
 
 .incident__number {
   @include h2-bold;
   color: $brand-primary-600;
-  flex-grow: 1;
-  flex-shrink: 0;
+  width: 33%;
 }
 
 .incident__address {
-  flex-grow: 1;
-  flex-shrink: 0;
+  width: 34%;
 }
 
 .incident__date {
-  flex-grow: 1;
-  flex-shrink: 0;
+  width: 33%;
 }
 
 .incident__time {
   text-align: right;
-  width: 6rem;
+  width: 5rem;
 }
