--- a/angular/projects/design/src/styles/_navs.scss
+++ b/angular/projects/design/src/styles/_navs.scss
@@ -6,6 +6,7 @@
 }
 
 .nav__item {
+  flex-basis: 1;
   flex-grow: 1;
   overflow: hidden;
   border: 0.125rem solid $brand-primary-500;
@@ -33,6 +34,7 @@
   text-align: center;
   text-decoration: none;
   text-transform: none;
+  white-space: nowrap;
 }
 
 .nav__link--active {
