--- a/angular/projects/design/src/styles/_headers.scss
+++ b/angular/projects/design/src/styles/_headers.scss
@@ -45,7 +45,7 @@ $min-command-footer-portrait-width: $portrait-width + 2 * (13.75rem + 2 * $grid-
 
 .command-header {
   background-color: white;
-  height: 5rem;
+  min-height: 5rem;
   left: 0;
   position: fixed;
   right: 0;
@@ -53,7 +53,7 @@ $min-command-footer-portrait-width: $portrait-width + 2 * (13.75rem + 2 * $grid-
   z-index: 1000;
 
   .nav {
-    margin-bottom: 0;
+    margin: 0 auto;
     width: auto;
   }
 }
