--- a/angular/projects/design/src/styles/_headers.scss
+++ b/angular/projects/design/src/styles/_headers.scss
@@ -69,6 +69,7 @@ shared-command-header ~ main {
   height: 100%;
   justify-content: space-between;
   padding: 0 $grid-gutter-width 1rem;
+  position: relative;
 
   & > * {
     margin-top: 1rem;
@@ -80,15 +81,65 @@ shared-command-header ~ main {
   }
 }
 
+.command-header__dropdown {
+  background-color: white;
+  border: 0.125rem solid $brand-primary-500;
+  border-bottom-left-radius: 0.75rem;
+  border-bottom-right-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
+  display: none;
+  left: -$grid-gutter-width / 4;
+  list-style-type: none;
+  padding: 0.375rem;
+  position: absolute;
+  top: 3rem;
+
+  &::before {
+    background-color: white;
+    border-left: 0.125rem solid $brand-primary-500;
+    border-top: 0.125rem solid $brand-primary-500;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    border-right: 0.125rem solid $brand-primary-500;
+    content: ' ';
+    display: block;
+    height: (3rem + 3 * $grid-gutter-width / 8);
+    left: -0.125rem;
+    position: absolute;
+    top: -(3rem + 3 * $grid-gutter-width / 8);
+    width: (3rem + $grid-gutter-width / 2);
+  }
+}
+
+.command-header__dropdown--active {
+  display: block;
+}
+
+.command-header__dropdown-link {
+  border-radius: 0.5rem;
+  display: block;
+  height: 3.25rem;
+  padding: 0.75rem 0.5rem;
+  text-transform: none;
+  text-decoration: none;
+  white-space: nowrap;
+
+  &:hover {
+    background-color: $base-100;
+  }
+}
+
 .command-header__picture {
   display: block;
   width: 3rem;
   height: 3rem;
+  z-index: 1000;
 }
 
 .command-header__name {
   @include h4-semibold;
   color: $base-500;
+  cursor: default;
   margin: 0;
 }
 
