Admin Client interface

--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -38,6 +38,9 @@
       <a routerLink="/agencies" routerLinkActive="sidebar__item--active" class="sidebar__item">Agencies</a>
     </li>
     <li>
+      <a routerLink="/clients" routerLinkActive="sidebar__item--active" class="sidebar__item">Clients</a>
+    </li>
+    <li>
       <a routerLink="/facilities" routerLinkActive="sidebar__item--active" class="sidebar__item">Facilities</a>
     </li>
     <li>
