Fix linked table row styling

--- a/angular/projects/design/src/styles/_tables.scss
+++ b/angular/projects/design/src/styles/_tables.scss
@@ -4,7 +4,7 @@ table {
   }
 }
 
-tr[ng-reflect-router-link] {
+tr.router-link {
   cursor: pointer;
   &:hover {
     background-color: $brand-primary-100;
