--- a/angular/projects/admin/src/app/agencies/list-agencies.component.html
+++ b/angular/projects/admin/src/app/agencies/list-agencies.component.html
@@ -11,19 +11,23 @@
     <table class="table table-striped table-sm">
       <thead>
         <tr>
+          <th>Claimed?</th>
+          <th>State</th>
           <th>State Unique ID</th>
           <th>Number</th>
           <th>Name</th>
-          <th>State</th>
         </tr>
       </thead>
       <shared-list type="agencies" [search]="search">
         <ng-template let-record="record">
           <tr [routerLink]="['/agencies', record.id]">
+            <td>
+              <shared-checkbox [id]="record.id" name="claimedAgency" [source]="record"></shared-checkbox>
+            </td>
+            <td>{{record.stateId}}</td>
             <td>{{record.stateUniqueId}}</td>
             <td>{{record.number}}</td>
             <td>{{record.name}}</td>
-            <td>{{record.stateId}}</td>
           </tr>
         </ng-template>
       </shared-list>
