--- a/angular/projects/admin/src/app/agencies/edit-agency.component.html
+++ b/angular/projects/admin/src/app/agencies/edit-agency.component.html
@@ -1,21 +1,34 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
   <h1 class="h2">Edit Agency</h1>
 </div>
-<shared-form *ngIf="id" type="agencies" [id]="id" class="d-block col-xl-6">
-  <ng-template let-record="record" let-error="error">
-    <div class="mb-3">
-      <shared-select-field id="stateId" label="State" [source]="record" [target]="record" [error]="error">
-        <option *ngFor="let state of states" [value]="state.id">{{state.name}}</option>
-      </shared-select-field>
-    </div>
-    <div class="mb-3">
-      <shared-text-field id="stateUniqueId" label="State Unique Id" [source]="record" [target]="record" [error]="error"></shared-text-field>
-    </div>
-    <div class="mb-3">
-      <shared-text-field id="number" label="Number" [source]="record" [target]="record" [error]="error"></shared-text-field>
-    </div>
-    <div class="mb-3">
-      <shared-text-field id="name" label="Name" [source]="record" [target]="record" [error]="error"></shared-text-field>
-    </div>
-  </ng-template>
-</shared-form>
+<div class="d-block col-xl-6">
+  <ul *ngIf="claimedAgencyId" class="nav">
+    <li class="nav__item"><a class="nav__link nav__link--active" tabindex="0">Canonical</a></li>
+    <li class="nav__item"><a class="nav__link" [routerLink]="['/agencies', claimedAgencyId]">Claimed</a></li>
+  </ul>
+  <ul *ngIf="canonicalAgencyId" class="nav">
+    <li class="nav__item"><a class="nav__link" [routerLink]="['/agencies', canonicalAgencyId]">Canonical</a></li>
+    <li class="nav__item"><a class="nav__link nav__link--active" tabindex="0">Claimed</a></li>
+  </ul>
+  <shared-form *ngIf="id" type="agencies" [id]="id" (load)="onLoad($event)">
+    <ng-template let-record="record" let-error="error">
+      <div *ngIf="states.length > 0" class="mb-3">
+        <shared-select-field id="stateId" label="State" [source]="record" [target]="record" [error]="error">
+          <option *ngFor="let state of states" [value]="state.id">{{state.name}}</option>
+        </shared-select-field>
+      </div>
+      <div class="mb-3">
+        <shared-text-field id="stateUniqueId" label="State Unique Id" [source]="record" [target]="record" [error]="error"></shared-text-field>
+      </div>
+      <div class="mb-3">
+        <shared-text-field id="number" label="Number" [source]="record" [target]="record" [error]="error"></shared-text-field>
+      </div>
+      <div class="mb-3">
+        <shared-text-field id="name" label="Name" [source]="record" [target]="record" [error]="error"></shared-text-field>
+      </div>
+      <div *ngIf="record.isClaimed" class="mb-3">
+        <shared-text-field id="subdomain" label="Subdomain" [source]="record" [target]="record" [error]="error"></shared-text-field>
+      </div>
+    </ng-template>
+  </shared-form>
+</div>
