[#138] Admin can set RoutED url on a per-Agency basis (#143)
* Fix linked table row styling

* Canonical Agency record editing

* Better Site Admin Agency editing

* New RoutED URL config in Agency

* Return HTTP 401 Unauthorized when connecting to websocket not logged in

* More HTTP status code handling in websocket server

--- a/angular/projects/design/src/styles/_tables.scss
+++ b/angular/projects/design/src/styles/_tables.scss
@@ -4,11 +4,15 @@ table {
   }
 }
 
-tr[ng-reflect-router-link] {
+tr.router-link {
   cursor: pointer;
   &:hover {
     background-color: $brand-primary-100;
   }
+}
+
+td .form-check {
+  margin: 0;
 }
 
 .table {
