--- a/angular/projects/design/src/app/buttons.component.html
+++ b/angular/projects/design/src/app/buttons.component.html
@@ -1,5 +1,20 @@
 <h1>Buttons</h1>
 <section>
+  <h2>Chips</h2>
+  <div class="mb-3">
+    <button class="chip chip--sm chip--primary">Small</button>
+    <button class="chip chip--sm chip--secondary ms-2">Small</button>
+  </div>
+  <div class="mb-3">
+    <button class="chip chip--primary">Medium</button>
+    <button class="chip chip--secondary ms-2">Medium</button>
+  </div>
+  <div class="mb-3">
+    <button class="chip chip--lg chip--primary">Large</button>
+    <button class="chip chip--lg chip--secondary ms-2">Large</button>
+  </div>
+</section>
+<section>
   <h2>Small Buttons</h2>
   <div class="mb-3">
     <button class="btn btn--sm btn--primary">Label</button>
