--- a/angular/projects/design/src/app/inputs.component.html
+++ b/angular/projects/design/src/app/inputs.component.html
@@ -35,6 +35,14 @@
   </div>
 </section>
 <section>
+  <h2>Recording Field</h2>
+  <div class="mb-3">
+    <shared-recording-field title="Recording 1" [duration]="78" fileUrl="https://download.samplelib.com/mp3/sample-15s.mp3" timestamp="2022-04-06T23:38:04+0000">
+      Patient's name is Michael Fantacico age 45 respiratory rate 26 pulse 130 capillary refill to blood pressure 110/80 youngish man walking around with torn clothes in a small scrape on the knee seems slightly concussed but is able to communicate, priority delayed.
+    </shared-recording-field>
+  </div>
+</section>
+<section>
   <h2>Dropdowns</h2>
   <div class="mb-3">
     <shared-select-field id="dropdown" label="Dropdown" [source]="source" [target]="source">
