--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -45,6 +45,7 @@
 @import 'styles/type';
 @import 'styles/grid';
 @import 'styles/buttons';
+@import 'styles/chips';
 @import 'styles/forms';
 @import 'styles/icons';
 @import 'styles/headers';
