--- a/angular/projects/design/src/styles/_icons.scss
+++ b/angular/projects/design/src/styles/_icons.scss
@@ -3,3 +3,9 @@
   display: inline-block;
   font-size: 1.5rem;
 }
+
+[class^='pr-icon-40-'],
+[class*=' pr-icon-40-'] {
+  display: inline-block;
+  font-size: 2.5rem;
+}
