--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,6 +1,6 @@
 <%- contentFor('title') %>Home
 <%- contentFor('head') %>
-<base href="/">
+<base href="/old">
 <style type="text/css">
   html, body {
     height: 100%;
