--- a/angular/projects/design/src/app/icons.component.html
+++ b/angular/projects/design/src/app/icons.component.html
@@ -2,7 +2,15 @@
 <section>
   <h2>Icon/24px</h2>
   <div class="mb-3">
-    <i class="pr-icon pr-icon-24-chevron-down"></i> <i class="pr-icon pr-icon-24-exit"></i> <i class="pr-icon pr-icon-24-search"></i>
+    <i class="pr-icon pr-icon-24-chevron-down"></i>
+    <i class="pr-icon pr-icon-24-clock"></i>
+    <i class="pr-icon pr-icon-24-exit"></i>
+    <i class="pr-icon pr-icon-24-search"></i>
+  </div>
+  <h2>Icon/40px</h2>
+  <div class="mb-3">
+    <i class="pr-icon pr-icon-40-record-play"></i>
+    <i class="pr-icon pr-icon-40-record-stop"></i>
   </div>
 </section>
 <section>
